--- a/sample.html
+++ b/sample.html
@@ -15,7 +15,7 @@ body {font-family:'Times New Roman', Times, serif}
 .mySlides {display: none}
 </style>
 </head>
-<body>
+<body id="home">
 
 
   <nav>
@@ -135,7 +135,7 @@ body {font-family:'Times New Roman', Times, serif}
     <!-- The Contact Section -->
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
       <h2 class="w3-wide w3-center">CONTACT</h2>
-      <p class="w3-opacity w3-center"><i>find us</i></p>
+      <p class="w3-opacity w3-center"><i>Find Us</i></p>
       <div class="w3-row w3-padding-32">
         <div class="w3-col m6 w3-large w3-margin-bottom">
           <i class="fa fa-map-marker" style="width:30px"></i> Instituto tecnologico de chetumal<br>
@@ -170,7 +170,7 @@ body {font-family:'Times New Roman', Times, serif}
 
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15150.064008684942!2d-88.47669848837218!3d18.323729120184524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f5b93562bb7f51f%3A0x9b4f08a28fa681e6!2sConcepcion%2C%20Belize!5e0!3m2!1sen!2smx!4v1655954852180!5m2!1sen!2smx"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%"></iframe>
   <!-- Footer -->
-  <h1  style ="text-align: center;">follow us at</h1>
+  <h1  style ="text-align: center;">Follow Us At</h1>
   <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -178,7 +178,7 @@ body {font-family:'Times New Roman', Times, serif}
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-    <p class="w3-medium">Powered by <a  target="_blank">Francis cawich &copy; 2021</a></p>
+    <p class="w3-medium">Powered B  y <a  target="_blank">Francis cawich &copy; 2021</a></p>
   </footer>
   <script src="/javaScript/script.js"></script>
   
