pajina de labores

--- a/sample.html
+++ b/sample.html
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="css/sample.css">
-<!---<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">-->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -67,23 +67,23 @@
       </p>
       <div class="w3-row w3-padding-32">
         <div class="w3-third">
-          <p>Name</p>
+          <p>senior Developer </p>
+          <img src="/image/Fran.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        </div>
+        <div class="w3-third">
+          <p>Manager</p>
           <img src="/image/Francis.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
         </div>
         <div class="w3-third">
-          <p>Name</p>
-          <img src="/image/Francis.png" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
-        </div>
-        <div class="w3-third">
-          <p>Name</p>
+          <p>DataBaseEningeer</p>
           <img src="/image/Francis.png" class="w3-round" alt="Random Name" style="width:60%">
         </div>
       </div>
     </div>
   
     <!-- The Tour Section -->
-    <div class="w3-black" id="tour">
-      <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <div class="w3-black" id="tour" >
+      <div class="w3-container w3-content w3-padding-64" style="max-width:800px; ">
         <h2 class="w3-wide w3-center">OUR jOBS</h2>
         <p class="w3-opacity w3-center"><i>nice looking</i></p><br>
 
